<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/background_main">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="35sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:layout_marginVertical="44dp"
            android:layout_marginHorizontal="32dp"
            android:text="@string/title"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categories"
            style="@style/Subtitle"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCategories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tasks"
            android:textAllCaps="true"
            style="@style/Subtitle"
            android:layout_marginTop="32dp"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTasks"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="16dp"
            android:layout_height="wrap_content" />


    </LinearLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_input_add"
        app:tint="@color/white"
        app:backgroundTint="@color/accent"
        android:contentDescription="Add Task"
        android:layout_gravity="end|bottom"
        android:layout_margin="32dp"/>

</FrameLayout>